docs: initialize CLAUDE.md with build commands and architecture guide
Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>